src/test/deca/context/valid/created/objet/affect_classe.deca
// Description :
// test de verification de l'affectation de classe
//
// Resultats :
// ok

class A {
 
}

class B extends A {
    

}
class C extends B {
   
}

{
    A a;
    C c;
    a = c;
}