src/test/deca/context/invalid/created/objet/affect_classe.deca
// Description :
//      test de verification de l'affectation de classe avec extends
// Resultats :
//      Ligne 16 : affectation incompatible

class A {
}

class B extends A {
}

{

    A a ;
    B b ;
    b = a;
}